# vii

./: .gitignore  .pre-commit-config.yaml  404.html  Cargo.toml  DEVELOPMENT.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile.toml  README.md  Taskfile.yaml  book.js  channels.html  data_types.html  examples.html  installation.html  introduction.html  mark.min.js  plugin_simple.html  print.html  quickstart.html  searcher.js  searchindex.js  searchindex.json  text_properties.html
.github/workflows/: tests.yml
book/: book.toml
book/book/: 404.html  highlight.js  index.html  print.html  searchindex.js  searchindex.json
book/src/: SUMMARY.md  channels.md  data_types.md  installation.md  quickstart.md  text_properties.md
css/: chrome.css  general.css  variables.css
src/: channel.rs  lib.rs  plugin.rs  textprop.rs  types.rs
tests/: test_plugin.rs  test_simple.rs
