[package]
name = "vii"
version = "0.0.2"
authors = ["Kyle L. Davis <aceofspades5757.github@gmail.com>"]
edition = "2021"
description = "Bindings to Vim objects, bindings to Vim channel commands, and a way to interact with Vim using Rust."

readme = "README.md"
license = "MIT"

homepage = "https://github.com/AceofSpades5757/vii"
repository = "https://github.com/AceofSpades5757/vii"

[dependencies]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
