[package]
name = "vii"
version = "0.0.18"
authors = ["Kyle L. Davis <aceofspades5757.github@gmail.com>"]
edition = "2021"
description = "Bindings to Vim objects, such as text properties, channel, and a way to interact with Vim using Rust."

readme = "README.md"
license = "MIT OR Apache-2.0"

homepage = "https://github.com/AceofSpades5757/vii"
repository = "https://github.com/AceofSpades5757/vii"

[dependencies]
serde = { version = "1.0.142", optional = true, features = ["derive"] }
serde_json = { version = "1.0.83", optional = true }

[features]
default = ["textprop", "channel"]
# https://vimhelp.org/textprop.txt.html
textprop = ["serde", "serde_json"]
channel = []

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
